--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "cloudinary": "^1.41.0",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "react": "^18",
