--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/url-gen": "^1.13.0",
     "@prisma/client": "^5.5.2",
     "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "react": "^18",
@@ -20,6 +21,7 @@
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
