--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:Vnmf1002@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgres://default:C8egla1vJpqR@ep-shy-cell-96073222.us-east-1.postgres.vercel-storage.com:5432/verceldb"
